@@ -1,3 +1,8 @@
+''' Jandy '''
+
+Implement OUTPUT functions to support the output controls.  Resolves [ticket:754]
+
+
 == 10/Jul/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b98.zip V1.6-b98]  ==
 
 ''' Jandy '''
